@@ -82,6 +82,7 @@
 				<configuration>
 					<compilerArgs>
 						<arg>-parameters</arg>
+						<arg>--enable-preview</arg>
 					</compilerArgs>
 					<source>12</source>
 					<target>12</target>
